attached_assets/Pasted-error-cannot-find-macro-trace-in-this-scope-src-cynthion-transfer-queue-rs-151-46-15-1746065518548.txt
error: cannot find macro `trace` in this scope
   --> src/cynthion/transfer_queue.rs:151:46
    |
151 | ...   Ok(_) => trace!("Successfully sent {} bytes to data channel", data_len),
    |                ^^^^^
    |
help: consider importing this macro
    |
4   + use log::trace;
    |

error: cannot find macro `trace` in this scope
   --> src/cynthion/transfer_queue.rs:158:33
    |
158 | ...                   trace!("Submitting new bulk transfer request");
    |                       ^^^^^
    |
help: consider importing this macro
    |
4   + use log::trace;
    |

error: cannot find macro `trace` in this scope
   --> src/cynthion/new_connection.rs:894:33
    |
894 | ...                   trace!("USB data starts with: {:02X?}", &data[0..4]);
    |                       ^^^^^
    |
help: consider importing this macro
    |
4   + use log::trace;
    |

error: cannot find macro `trace` in this scope
   --> src/cynthion/new_connection.rs:901:25
    |
901 |                         trace!("No USB data available from queue");
    |                         ^^^^^
    |
help: consider importing this macro
    |
4   + use log::trace;
    |

warning: unused import: `Context`
 --> src/cynthion/transfer_queue.rs:7:14
  |
7 | use anyhow::{Context, Error};
  |              ^^^^^^^
  |
  = note: `#[warn(unused_imports)]` on by default

error[E0061]: this function takes 1 argument but 2 arguments were supplied
   --> src/cynthion/transfer_queue.rs:152:58
    |
152 | ...> return Err(Error::new(e, "Failed sending capture data to channel")),
    |                 ^^^^^^^^^^    ---------------------------------------- unexpected argument #2 of type `&'static str`
    |
note: associated function defined here
   --> /Users/fuhaku/.cargo/registry/src/index.crates.io-1949cf8c6b5b557f/anyhow-1.0.98/src/error.rs:34:12
    |
34  |     pub fn new<E>(error: E) -> Self
    |            ^^^
help: remove the extra argument
    |
152 -                                     Err(e) => return Err(Error::new(e, "Failed sending capture data to channel")),
152 +                                     Err(e) => return Err(Error::new(e)),
    |

For more information about this error, try `rustc --explain E0061`.
warning: `usbfly` (bin "usbfly") generated 1 warning
error: could not compile `usbfly` (bin "usbfly") due to 5 previous errors; 1 warning emitted